--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,34 @@
 /* You can add global styles to this file, and also import other style files */
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
+
+:root {
+  --bg-color-primary: #000000;
+  --primary-yellow: #fce82f;
+  --primary-white: #ffffff;
+  --text-primary: #ffffff;
+  --text-secondary: #fce82f;
+  --font-primary: "Montserrat";
+  --font-secondary: "Poppins";
+}
+
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  background-color: var(--bg-color-primary);
+  font-family: var(--font-primary);
+  color: var(--text-primary);
+}
+
+@media only screen and (max-width: 768px) {
+  body {
+    padding-left: 5%;
+    padding-right: 5%;
+  }
+}
